<resources>
    <string name="app_name">Calculator</string>
    <string name="ac">AC</string>
    <string name="delete">◄</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="x">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="sum">+</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="equal">=</string>
    <string name="percent">%</string>
    <string name="dive">/</string>
    <string name="deduc">-</string>
    <string name="settings">Settings</string>
    <string name="school_theme">School Theme</string>
    <string name="space_theme">Space Theme</string>
    <string name="accept">Accept</string>
</resources>