<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonStyle"
        android:id="@+id/button_ac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:text="@string/ac"
        app:layout_constraintBottom_toTopOf="@+id/button_1"
        app:layout_constraintEnd_toStartOf="@+id/button_delete"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonStyle"
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:text="@string/delete"
        app:layout_constraintBottom_toTopOf="@+id/button_2"
        app:layout_constraintEnd_toStartOf="@+id/button_percent"
        app:layout_constraintStart_toEndOf="@+id/button_ac"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonStyle"
        android:id="@+id/button_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:text="@string/percent"
        app:layout_constraintBottom_toTopOf="@id/button_3"
        app:layout_constraintEnd_toStartOf="@id/button_div"
        app:layout_constraintStart_toEndOf="@+id/button_delete"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonStyle"
        android:id="@+id/button_div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_percent"
        app:layout_constraintTop_toTopOf="@id/button_percent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@id/button_4"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintStart_toStartOf="@+id/button_ac"
        app:layout_constraintTop_toBottomOf="@id/button_ac" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@id/button_5"
        app:layout_constraintEnd_toStartOf="@id/button_3"
        app:layout_constraintStart_toEndOf="@id/button_1"
        app:layout_constraintTop_toBottomOf="@id/button_delete" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:text="@string/_3"
        app:layout_constraintBottom_toTopOf="@id/button_6"
        app:layout_constraintEnd_toStartOf="@+id/button_multiplic"
        app:layout_constraintStart_toEndOf="@+id/button_2"
        app:layout_constraintTop_toBottomOf="@id/button_percent" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonStyle"
        android:id="@+id/button_multiplic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_3"
        app:layout_constraintStart_toEndOf="@+id/button_3"
        app:layout_constraintTop_toBottomOf="@+id/button_div" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:text="@string/_4"
        app:layout_constraintEnd_toStartOf="@+id/button_5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@id/button_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        app:layout_constraintEnd_toStartOf="@+id/button_6"
        app:layout_constraintStart_toEndOf="@id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/_6"
        app:layout_constraintStart_toEndOf="@+id/button_5"
        app:layout_constraintTop_toBottomOf="@id/button_3" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonStyle"
        android:id="@+id/button_deduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/deduc"
        app:layout_constraintStart_toEndOf="@+id/button_6"
        app:layout_constraintTop_toBottomOf="@+id/button_multiplic" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        app:layout_constraintBottom_toTopOf="@+id/button_zero"
        app:layout_constraintEnd_toEndOf="@+id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        app:layout_constraintEnd_toEndOf="@id/button_5"
        app:layout_constraintTop_toBottomOf="@+id/button_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/_9"
        app:layout_constraintEnd_toEndOf="@id/button_6"
        app:layout_constraintTop_toBottomOf="@+id/button_6" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonStyle"
        android:id="@+id/button_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/sum"
        app:layout_constraintStart_toEndOf="@+id/button_9"
        app:layout_constraintTop_toBottomOf="@+id/button_deduction" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_zero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_point"
        app:layout_constraintStart_toStartOf="@+id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/button_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:text="@string/point"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/button_9"
        app:layout_constraintStart_toEndOf="@id/button_zero"
        app:layout_constraintTop_toBottomOf="@+id/button_9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/equal"
        android:backgroundTint="#00cc00"
        app:layout_constraintEnd_toEndOf="@+id/button_sum"
        app:layout_constraintStart_toEndOf="@+id/button_point"
        app:layout_constraintTop_toBottomOf="@+id/button_sum" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_bottom_end"
        android:textSize="@dimen/sett"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height"
        android:layout_margin="@dimen/margin_textView"
        app:layout_constraintBottom_toTopOf="@+id/button_percent"
        app:layout_constraintEnd_toEndOf="@+id/button_div"
        app:layout_constraintStart_toStartOf="@+id/button_ac"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>